--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
+  height: 8vh;
  
   
 
@@ -80,6 +81,7 @@ nav li:nth-child(1) {
 }
 
 #main {
+  margin-top: 8vh;
   height: 100%;
   width: 100%;
   
